--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp --env dev",
+    "prod": "gulp --env prod"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,21 @@
   "bugs": {
     "url": "https://github.com/abobija/abobija.github.io/issues"
   },
-  "homepage": "https://github.com/abobija/abobija.github.io#readme"
+  "homepage": "https://github.com/abobija/abobija.github.io#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.0.2",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "postcss": "^8.1.10"
+  },
+  "dependencies": {}
 }
