--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.2",
     "browser-sync": "^2.26.13",
+    "browserify": "^17.0.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
@@ -36,9 +37,13 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-terser": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "postcss": "^8.1.10"
+    "postcss": "^8.1.10",
+    "tsify": "^5.0.2",
+    "typescript": "^4.1.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {}
 }
