--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
     "cssnano": "^4.1.10",
+    "extend-object": "^1.0.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.3.0",
@@ -40,6 +41,8 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "postcss": "^8.1.10",
+    "sass": "^1.29.0",
+    "through2": "^4.0.2",
     "tsify": "^5.0.2",
     "typescript": "^4.1.2",
     "vinyl-buffer": "^1.0.1",
