--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
+    "milligram": "^1.4.1",
     "postcss": "^8.1.10",
     "sass": "^1.29.0",
     "through2": "^4.0.2",
