--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "milligram": "^1.4.1",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.1.10",
     "sass": "^1.29.0",
     "through2": "^4.0.2",
