--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/abobija/abobija.github.io#readme",
   "devDependencies": {
     "autoprefixer": "^10.0.2",
+    "bootstrap": "^4.5.3",
     "browser-sync": "^2.26.13",
     "browserify": "^17.0.0",
     "cssnano": "^4.1.10",
@@ -40,8 +41,6 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "milligram": "^1.4.1",
-    "normalize.css": "^8.0.1",
     "postcss": "^8.1.10",
     "sass": "^1.29.0",
     "through2": "^4.0.2",
