--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/abobija/abobija.github.io#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "autoprefixer": "^10.0.2",
     "bootstrap": "^4.5.3",
     "browser-sync": "^2.26.13",
