--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "abobija.github.io",
   "version": "1.0.0",
   "description": "Alija Bobija's website",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "gulp clean",
-    "build": "gulp clean && gulp build --env prod",
-    "build:dev": "gulp build --env dev",
-    "serve": "gulp serve",
-    "build:dev:serve": "npm run build:dev && npm run serve"
+    "build": "gulp ghpages && gulp clean && gulp build --env prod",
+    "build:dev": "gulp ghpages && gulp build --env dev",
+    "serve": "npm run build && gulp serve",
+    "serve:dev": "npm run build:dev && gulp serve",
+    "start": "npm run serve:dev"
   },
   "repository": {
     "type": "git",
