--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:dev": "gulp ghpages && gulp build --env dev",
     "serve": "npm run build && gulp serve",
     "serve:dev": "npm run build:dev && gulp serve",
-    "start": "npm run serve:dev",
-    "publish": "npm run build && gulp publish"
+    "start": "npm run serve:dev"
   },
   "repository": {
     "type": "git",
