--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "autoprefixer": "^10.0.2",
     "bootstrap": "^4.5.3",
-    "browser-sync": "^2.26.13",
+    "browser-sync": "^2.26.14",
     "browserify": "^17.0.0",
     "cssnano": "^4.1.10",
     "extend-object": "^1.0.0",
@@ -42,6 +42,7 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulplog": "^1.0.0",
